k8s/key-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: kong
        image: kong:latest
        ports:
        - containerPort: 8000
          name: proxy
        - containerPort: 8443
          name: proxy-ssl
        - containerPort: 8001
          name: admin
---
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: default
spec:
  selector:
    app: kong
  ports:
  - port: 8000
    targetPort: 8000
    name: proxy
  - port: 8001
    targetPort: 8001
    name: admin
  type: LoadBalancer
